--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
                 <p class="lang__link">En</p>
             </div>
         </header>
+        <main>
+            <section class="lead">
+                <h2 class="lead__title">Путешествия по России</h2>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <figure class="lead__image">
+                    <img class="lead__image-road" src="images/Group 4.svg" alt="Карта пути">
+                    <img class="lead__image-photo" src="images/kalegin-michail-179870-unsplash.svg" alt="Фотография из вагона поезда">
+                    <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+                </figure>
+            </section>
+        </main>
+        <footer>
+        </footer>
     </div>
 </body>
