added photo-grid + adaptability

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
             <section class="lead">
                 <h2 class="lead__title">Путешествия по России</h2>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <figure class="lead__image">
-                    <img class="lead__image-road" src="images/Group 4.svg" alt="Карта пути">
-                    <img class="lead__image-photo" src="images/kalegin-michail-179870-unsplash.svg" alt="Фотография из вагона поезда">
+                <figure>
+                    <img class="lead__image" src="images/lead-polka.jpg" alt="Фотография из вагона поезда">
                     <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
                 </figure>
             </section>
@@ -45,6 +44,20 @@
                     <li>Природных заповедников <span class="intro__list_thin">105</span></li>
                     <li>Аэропортов <span class="intro__list_thin">241</span></li>
                 </ol>
+            </section>
+            <section class="photo-grid">
+                <img class="photo-grid__item" src="images/photo-grid-train.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-tuman.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-sochi.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-arisa.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-baikal.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg">
+                <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg">
             </section>
         </main>
         <footer>
