added cover + adaptability

--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
                     </div>
                 </div>
             </section>
+            <section class="cover">
+                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+                    <div class="title">
+                        <h2 class="cover__title">До Байкала «на собаках»</h2>
+                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                    </div>
+                    <img class="cover__background" src="images/cover-trains.jpg" alt="Поезда">
+                </a>
+            </section>
         </main>
         <footer>
         </footer>
