--- a/index.html
+++ b/index.html
@@ -142,7 +142,15 @@
                 </a>
             </section>
         </main>
-        <footer>
+        <footer class="footer">
+            <div class="link">
+                <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+                <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+                <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+                <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+                <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+            </div>
+            <p class="footer__copyright">© 2020. Katt</p>
         </footer>
     </div>
 </body>
